release/ga/prod/v1.2.5/RELEASE-NOTES.md
# GG-CMS Release Archive — v1.2.5 (prod)

- **Target Environment**: prod
- **Release Version**: v1.2.5
- **Build Timestamp**: 2026-09-20T11:46:09Z
- **Git Commit**: 7cc69c5

## Component Version Matrix
- **React UI**: v1.2.5
- **Go Backend**: v1.2.5
- **DB Migrations**: v1.2.5
- **AI Content Factory**: v1.2.5

## Deployment Contract & Security Signature
- **API Contract Version**: v1
- **Deployment Contract**: [deployment-contract.json](./deployment-contract.json)
- **Version Manifest**: [version-manifest.json](./version-manifest.json)

## Recent Change Log (Git Commits)
```
7cc69c5 feat(courses): unified course runner layout with ModuleLessonNavigator, persistent progress state, removed enrollment barrier, and category select dropdown
5a7be2e docs(release): update v1.2.3 release notes with commit details
31f4e84 feat(courses): category course visibility, dynamic duration, compact practice question navigator grid, and GA v1.2.3 release
de85c0c fix(cms): top-level edit routes, TOC scroll sync, and tag typeahead search
45e7761 fix(preview): practice course layout preview, auto back page refresh, and default reviewer/publisher groups
da1a0b0 release(prod): GA v1.2.0 - high-contrast article/course reader styling and auto scroll TOC navigation
461020c release: generate GA release v1.1.6 and sync release branch
f84975b fix(import): add missing useMemo import in BulkImport.tsx
f045559 test: exclude e2e Playwright specs from Vitest unit test runner
37f8f12 fix(ui): improve loading skeletons and route slug matching across frontend pages
```
